feat: add support for Sanskrit
What?
Create all the minimum files required for adding Sanskrit support in LanguageTools.

--- a/languagetool-language-modules/all/pom.xml
+++ b/languagetool-language-modules/all/pom.xml
@@ -138,6 +138,10 @@
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
+            <artifactId>language-sa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.languagetool</groupId>
             <artifactId>language-sk</artifactId>
         </dependency>
         <dependency>
